--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.1",
     "react-i18next": "^16.2.0",
     "react-native": "0.82.1",
+    "react-native-config": "^1.6.1",
     "react-native-gesture-handler": "^2.29.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.5.2",
